 cmake_minimum_required(VERSION 3.26)
project(AP_CSP C)

set(CMAKE_C_STANDARD 90)

 add_executable(52a 52a.C)
 add_executable(main main.c)
 add_executable(54b 54b.c)
 add_executable(54c 54c.c)
 add_executable(58h 58h.c)
 add_executable(72t 72t.c)
 add_executable(88a 88a.c)
 add_executable(MSOE2013-1 MSOE2013-1.c)
